--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "heroku-app",
   "version": "1.0.0",
   "description": "",
+  "engines": {"node":"10.16.0","npm":"6.9.0"},
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
