--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "heroku-app",
+  "name": "weddingmanager",
   "version": "1.0.0",
-  "description": "",
-  "engines": {"node":"10.16.0","npm":"6.9.0"},
-  "main": "index.js",
+  "description": "Wedding Manager",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amrit-kerketta-au5/heroku-app.git"
+    "client-install": "npm install --prefix client",
+    "start": "node app.js",
+    "server": "nodemon app.js",
+    "client": "npm start --prefix client",
+    "install-all": "concurrently \"npm install\" \"npm run client-install\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/amrit-kerketta-au5/heroku-app/issues"
-  },
-  "homepage": "https://github.com/amrit-kerketta-au5/heroku-app#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.18",
+    "nodemon": "^2.0.4",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.12"
   }
 }
