--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
-  "name": "weddingmanager",
+  "name": "testthings",
   "version": "1.0.0",
-  "description": "Wedding Manager",
-  "main": "app.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
-    "start": "node app.js",
-    "server": "nodemon app.js",
-    "client": "npm start --prefix client",
-    "install-all": "concurrently \"npm install\" \"npm run client-install\"",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"npm run build --prefix couples & npm run build --prefix vendor",
+    "heroku-postbuild": "npm run build && npm run dev",
+    "dev":"nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "concurrently": "^5.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.18",
-    "nodemon": "^2.0.4",
-    "pg": "^8.2.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.12"
+    "nodemon": "^2.0.4"
   }
 }
