--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npm run build --prefix couples & npm run build --prefix vendor",
-    "heroku-postbuild": "npm install --prefix couples && npm install --prefix vendor && npm run build && npm run dev",
-    "dev":"nodemon server.js"
+    "start": "node server.js",
+    "build": "npm run build --prefix couples & npm run build --prefix vendor",
+    "heroku-postbuild": "npm install && npm install --prefix couples && npm install --prefix vendor && npm run build && npm start",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
